RELATED BRANCH: master; MESSAGE: udacity d3 course initial

--- a/d3/gapminder/d3_demo.html
+++ b/d3/gapminder/d3_demo.html
@@ -124,5 +124,9 @@
   <script src="./lib/bootstrap.min.js"></script>
   <!-- Load D3.js -->
   <script src="./lib/d3.v3.js.min"></script>
+  
+  <!--CUSTOM-->
+  <script src="./d3_demo.js"></script>
+	
 </body>
 </html>
