RELATED BRANCH: master; MESSAGE: in depth typescript pt2

--- a/typescript/project1/index.html
+++ b/typescript/project1/index.html
@@ -8,6 +8,7 @@
     <title>Learning TypeScript</title>
     <script src="app.js"></script>
     <script src="exercise.js"></script>
+    <script src="class.js"></script>
 </head>
 <body>
 hello
