RELATED BRANCH: master; MESSAGE: in depth typescript pt3

--- a/typescript/project1/index.html
+++ b/typescript/project1/index.html
@@ -9,6 +9,7 @@
     <script src="app.js"></script>
     <script src="exercise.js"></script>
     <script src="class.js"></script>
+    <script src="exercise2.js"></script>
 </head>
 <body>
 hello
