RELATED BRANCH: master; MESSAGE: in depth typescript pt4

--- a/typescript/project1/index.html
+++ b/typescript/project1/index.html
@@ -10,6 +10,8 @@
     <script src="exercise.js"></script>
     <script src="class.js"></script>
     <script src="exercise2.js"></script>
+    <script src="namespaces-rectangle.js"></script>
+    <script src="namespaces.js"></script>
 </head>
 <body>
 hello
