--- a/typescript/project1/index.html
+++ b/typescript/project1/index.html
@@ -1,19 +1,30 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Learning TypeScript</title>
-    <script src="app.js"></script>
-    <script src="exercise.js"></script>
-    <script src="class.js"></script>
-    <script src="exercise2.js"></script>
-    <script src="namespaces-rectangle.js"></script>
-    <script src="namespaces.js"></script>
-</head>
-<body>
-hello
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport"
+			  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>Learning TypeScript</title>
+		<script src="./node_modules/systemjs/dist/system.js"></script>
+		<script>
+			SystemJS.config({
+				baseURL          : '/',
+				packages: {
+					'/': {
+						defaultExtension : 'js'
+					}
+				}
+			});
+			SystemJS.import('app.js');
+		</script>
+		<!--<script src="exercise.js"></script>-->
+		<!--<script src="class.js"></script>-->
+		<!--<script src="exercise2.js"></script>-->
+		<!--<script src="namespaces-rectangle.js"></script>-->
+		<!--<script src="namespaces.js"></script>-->
+	</head>
+	<body>
+		hello
+	</body>
 </html>
