--- a/webassembly/BasicBrowserAPIs/public/index.html
+++ b/webassembly/BasicBrowserAPIs/public/index.html
@@ -19,12 +19,14 @@
     <script>
 
         //LOAD A WASM FILE
+        //////////////////
         WebAssembly.instantiateStreaming( fetch('program.wasm')).then(res => {
             console.log('WASM file ready!');
         });
 
 
-        //IMPORT A JS FN THAT AND LOG AN INT FROM WASM
+        //IMPORT IN WASM A JS FN THAT LOGS A PROVIDED INT NUMBER
+        //////////////////
         const imports = {
             env: {
                 consoleLog: console.log
@@ -43,23 +45,30 @@
 
         })
 
-        //IMPORT A JS FN THAT AND LOG AN INT AND A STRING FROM WASM
+        //SEND A STRING FROM WASM TO JS
+        //////////////////
+        let wasmInstanceMemory = {};
+        const readMemoryString = (offset, length) => {
+            const stringBuffer = new Uint8Array(wasmInstanceMemory.buffer, offset, length);
+            const msg = new TextDecoder().decode(stringBuffer);
+            console.log(msg);
+            window.dispatchEvent( new CustomEvent('wasm-calc-finished', { detail: msg }));
+        }
         const imports2 = {
             env: {
-                integerLog: console.log,
-                stringLog: console.log
+                sendString: readMemoryString    
             }
         }
         WebAssembly.instantiateStreaming(
-            fetch('doubleNumberString.wasm'), 
+            fetch('calculate.wasm'), 
             imports2
         ).then(res => {
-            const MyDoubleWasmFn = res.instance.exports.getDoubleNumber;
-            for(let i=1; i<11; i++) {
-                MyDoubleWasmFn(i);
-            }
-
+            wasmInstanceMemory = res.instance.exports.memory;
+            const calculate = res.instance.exports.calculate;
+            calculate();
         })
+
+        window.addEventListener('wasm-calc-finished', event => alert(event.detail));
     </script>
 
     <script src="scripts.js"></script>
