--- a/webassembly/BasicBrowserAPIs/public/index.html
+++ b/webassembly/BasicBrowserAPIs/public/index.html
@@ -16,6 +16,8 @@
 
 <body>
 
+    <div class="title">WebAssemby Basic Browser APIs</div>
+
     <script>
 
         //LOAD A WASM FILE
@@ -71,7 +73,6 @@
         window.addEventListener('wasm-calc-finished', event => alert(event.detail));
     </script>
 
-    <script src="scripts.js"></script>
 </body>
 
 </html>
