--- a/webassembly/Emscripten/public/index.html
+++ b/webassembly/Emscripten/public/index.html
@@ -21,12 +21,16 @@
     <script src="demo.js"/></script>
     <script>
 
-        // CWRAPPING A FUNCTION TO BE EASILY EXECUTED AS A JS FUNCTION
-        const greet = cwrap('greet', 'string', ['string']);
-        //greet('Francesco');
-        //greet('Lukas');
-        //greet('Julian');
+        Module['onRuntimeInitialized'] = () => {
 
+            // CWRAPPING A FUNCTION TO BE EASILY EXECUTED AS A JS FUNCTION
+            const greet = cwrap('greet', 'string', ['string']);
+            console.log(greet('Francesco'));
+            console.log(greet('Lukas'));
+            console.log(greet('Julian'));
+
+        }
+        
         const getValueJS = () => 42;
         const getValueJSString = () => 'Hey There!';
 
