Some progress has been made!

--- a/typescript/course2/maps/index.html
+++ b/typescript/course2/maps/index.html
@@ -1,6 +1,9 @@
 <html>
+    <head>
+        <meta charset="utf-8" />
+    </head>
     <body>
-        <script src="./src/index.ts"></script>
+        <script  src="./src/index.ts"></script>
         <h1>TS - Parcel</h1>
     </body>
 </html>
