--- a/typescript/course2/maps/index.html
+++ b/typescript/course2/maps/index.html
@@ -3,8 +3,9 @@
         <meta charset="utf-8" />
     </head>
     <body>
+        <h1>TS - Parcel</h1>
+        <div id="map" style="height: 100%"></div>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNLrJhOMz6idD05pzfn5lhA-TAw-mAZCU"></script>
         <script  src="./src/index.ts"></script>
-        <h1>TS - Parcel</h1>
     </body>
 </html>
