--- a/typescript/course2/webFramework/index.html
+++ b/typescript/course2/webFramework/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
-        <h1>Hi There!</h1>
+        <div id="root-form"></div>
+        <div id="root-list"></div>
         <script src="./src/index.ts"></script>
     </body>
 </html>
