Some progress has been made!

--- a/web-components/course1/advanced-stencil/src/index.html
+++ b/web-components/course1/advanced-stencil/src/index.html
@@ -9,6 +9,7 @@
     <script nomodule src="/build/advanced-stencil.js"></script>
   </head>
   <body>
-    <uc-stock-price></uc-stock-price>
+    <uc-stock-price symbol="XOM"></uc-stock-price>
+    <uc-stock-finder></uc-stock-finder>
   </body>
 </html>
