Some progress has been made!

--- a/micro-frontends/course1/project1/container/public/index.html
+++ b/micro-frontends/course1/project1/container/public/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head></head>
 	<body>
-		<div id="dev-products"></div>
+		<div id="container-products"></div>
 		<hr />
-		<div id="dev-cart"></div>
+		<div id="container-cart"></div>
 	</body>
 </html>
